src/test/egern/fail/arithmetic_expressions_on_booleans_fail.egern
print(true + 3);
print(3 + false);
print(true + false);

print(true - 3);
print(3 - false);
print(true - false);

print(true * 3);
print(3 * false);
print(true * false);

print(true / 3);
print(3 / false);
print(true / false);

print(true % 3);
print(3 % false);
print(true % false);

print(-true);
